--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FileSafetyApp">
         <activity
+            android:name=".decryptionType"
+            android:exported="false" />
+        <activity
+            android:name=".encryptionType"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
